interpreter/tests/test-modules/method-references.enzo
//= METHOD REFERENCING: BASICS
$pet: [
    $name: "Spot",
    speak: (
        return("Woof! My name is <$self.name>");
    ),
    age-increment: (
        $self.age + 1 :> $self.age;
    ),
    $age: 5
];

// Reference a method without invoking it
$ref-speak: @pet.speak;
$ref-speak;                // prints "Woof! My name is Spot"
$ref-speak();              // prints "Woof! My name is Spot"

//= METHOD REFERENCE PASSED AS ARGUMENT
call-method: (
    param $fn-ref:;
    return($fn-ref());
);

call-method(@pet.speak);   // prints "Woof! My name is Spot"

//= METHOD REFERENCE WITH STATE MUTATION
$ref-age: @pet.age-increment;
$ref-age();                 // should increment $pet.age → 6
$ref-age();                 // should increment $pet.age → 7
$pet.age;                   // should print 7

//= METHOD REFERENCE TO ANONYMOUS FUNCTION INSIDE LIST
$list-funcs: [
    $adder: (
        param $x:;
        return($x + 10);
    )
];

$ref-adder: @list-funcs.adder;
$ref-adder(5);              // prints 15

//= METHOD REFERENCE: NESTED LIST
$outer2: [
    $inner: [
        $say-hi: (
            return("hi from inner");
        )
    ]
];

$ref-hi: @outer2.inner.say-hi;
$ref-hi();                  // prints "hi from inner"

//= METHOD REFERENCE ERROR: NON-EXISTENT METHOD
$bad-ref: @pet.nonexistent;   // error: List property not found: $nonexistent

//= BLUEPRINT METHOD REFERENCING: BASICS
Animal1: <[
    name: Text,
    speak: (
        return("I am <$self.name>");
    )
]>;

$dog1: Animal1[$name: "Fido"];
$ref-speak-animal: @dog1.speak;
$ref-speak-animal();      // prints "I am Fido"

//= BLUEPRINT METHOD WITH STATE MUTATION ──────────────────────
Counter3: <[
    count: Number,
    increment: (
        $self.count + 1 :> $self.count;
        return($self.count);
    )
]>;

$c3: Counter3[$count: 0];
$ref-inc: @c3.increment;
$ref-inc();               // prints 1
$ref-inc();               // prints 2
$c3.count;                 // prints 2

//= METHOD REFERENCE PASSED INTO FUNCTION (BLUEPRINT) ─────────
invoke-method: (
    param $fn-ref:;
    return($fn-ref());
);

invoke-method(@c3.increment);  // prints 3 (increments again)

//= VARIANT METHOD REFERENCING ────────────────────────────────
GoblinV: <[
    hp: Number,
    cackle: (
        return("heeheehee");
    )
]>;
OrcV: <[
    hp: Number,
    shout: (
        return("Manmeat for dinner!");
    )
]>;

MonsterV variants: GoblinV, or OrcV;

$g3: MonsterV.GoblinV[$hp: 25];
$o3: MonsterV.OrcV[$hp: 40];

$ref-cackle: @g3.cackle;
$ref-cackle();            // prints "heeheehee"

$ref-shout: @o3.shout;
$ref-shout();             // prints "Manmeat for dinner!"

//= VARIANT METHOD PASSED INTO FUNCTION ───────────────────────
do-twice: (
    param $fn:;
    $fn();
    return($fn());
);

do-twice(@g3.cackle);      // prints "heeheehee" twice

//= ERROR: METHOD REFERENCE TO NON-EXISTENT VARIANT METHOD ────
$bad-ref-v: @g3.nonexistent;  // error: List property not found: $nonexistent
